# jeans

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: densities.ipynb  profiles.ipynb  rotationcurves.ipynb  shapes.ipynb  simulations.ipynb  simulations.py
examples/data/EAGLE-50/: CDMb_axisymmetric_shape_profiles.hdf5  CDMb_sphericallyAveraged_density_profiles.hdf5  SIDM1b_axisymmetric_shape_profiles.hdf5  SIDM1b_sphericallyAveraged_density_profiles.hdf5  vdSIDMb_axisymmetric_shape_profiles.hdf5  vdSIDMb_sphericallyAveraged_density_profiles.hdf5
scripts/: analytic_potentials.py  run.py  run_dict.py
src/jeans/: MANIFEST.in  __init__.py  cdm.py  classes.py  definitions.py  gen.py  nonspherical.py  potential.py  rotcurve.py  spherical.py  tools.py  utils.py
src/jeans/data/: initial_guess.csv
