[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jeans"
version = "1.0.0"
description = "Jeans modelling for SIDM halos."
authors = [
  { name = "Sean Tulin", email = "stulin@yorku.ca" },
  { name = "Adam Smith-Orlik", email = "asorlik@yorku.ca" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib==3.10.3",
  "numpy==2.3.2",
  "pandas==2.3.1", 
  "scipy==1.16.1",
  "dill==0.4.0",
  "h5py==3.14.0",
  "setuptools==75.3.0"
]

[project.urls]
"Source Code" = "https://github.com/dark-physics/jeans.git"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["jeans*"]

[tool.setuptools.package-data]
jeans = ["data/*.csv"]

[tool.black]
line-length = 120